云原生/Traefik/traefik-demo/ingressroute.yaml
---
# Redirect to https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: assess-uni
spec:
  entryPoints:
  - web
  routes:
  - match: Host(`assess-uni.test.rencaiyoujia.com`)
    kind: Rule
    middlewares:
    - name: redirect-https
    services:
    - name: assess-uni
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: assess-uni-tls
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`assess-uni.test.rencaiyoujia.com`)
    kind: Rule
    services:
    - name: assess-uni
      port: 80
  tls:
    #secretName: rencaiyoujia-tls-secret
    certResolver: ali
    domains:
    - main: '*.test.rencaiyoujia.com'
